--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "json-server": "json-server data.json"
   },
   "dependencies": {
     "axios": "^1.3.5",
     "bootstrap": "^4.6.0",
     "core-js": "^3.8.3",
     "jquery": "^3.6.4",
+    "json-server": "^0.17.3",
     "popper.js": "^1.16.1",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6"
